# Miniter

./: CHANGELOG.md  README.md  build.gradle.kts  settings.gradle.kts
.cargo/: config.toml
.github/workflows/: aur-upload.yml  create-vendored-tarball.yml  deploy-wasm.yml  publish-snap.yml  release-android.yml  release-desktop-macos.yml  release-desktop-windows.yml  release-desktop.yml
androidApp/: build.gradle.kts  proguard-rules.pro
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/kotlin/org/mlm/miniter/: MainActivity.kt  SettingsProvider.kt
androidApp/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
androidApp/src/main/res/values/: strings.xml  styles.xml
desktopApp/: build.gradle.kts
desktopApp/src/main/java/org/mlm/miniter/: DesktopMain.kt
desktopApp/src/main/java/org/mlm/miniter/platform/: SettingsProvider.kt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/changelogs/: 105.txt  155.txt  165.txt  175.txt  185.txt  195.txt  205.txt  215.txt  225.txt  235.txt  245.txt  25.txt  255.txt  265.txt  45.txt  55.txt  65.txt  75.txt  95.txt
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
packaging/: icon.icns  io.github.mlm_games.miniter.desktop  io.github.mlm_games.miniter.metainfo.xml
packaging/snap/: snapcraft.yaml
rust/: Cargo.toml  uniffi.android.toml  uniffi.wasm.toml
rust/crates/miniter-audio/: Cargo.toml
rust/crates/miniter-audio/src/: decode.rs  lib.rs  loudness.rs  mix.rs  probe.rs  util.rs  wav.rs  waveform.rs
rust/crates/miniter-domain/: Cargo.toml
rust/crates/miniter-domain/src/: clip.rs  export.rs  filter.rs  keyframe.rs  lib.rs  mask.rs  project.rs  text_overlay.rs  time.rs  timeline.rs  track.rs  transition.rs
rust/crates/miniter-ffi/: Cargo.toml
rust/crates/miniter-ffi/src/: affine.rs  lib.rs  wasm_bridge.rs  wasm_export.rs
rust/crates/miniter-media-native/: Cargo.toml
rust/crates/miniter-media-native/examples/: export_from_json.rs
rust/crates/miniter-media-native/src/: audio.rs  audio_export.rs  decoder.rs  demux.rs  encoder.rs  encoder_av1.rs  encoder_hw.rs  export.rs  export_shared.rs  filters.rs  frame.rs  image_cache.rs  lib.rs  mux.rs  probe.rs  subtitle.rs  thumbnailer.rs  vpx_encoder.rs  wasm_export.rs  webm_mux.rs  yuv.rs
rust/crates/miniter-media-native/src/decoders/: baaba.rs  mod.rs  oxideav.rs  rav1d.rs  session.rs  videoson.rs
rust/crates/miniter-media-native/src/demux/: ivf_demux.rs  mod.rs  mp4_demux.rs  symphonia_demux.rs  trait.rs
rust/crates/miniter-media-native/src/wasm_export/: encoder.rs  mod.rs
rust/crates/miniter-media-native/tests/: baaba_pts_monotonic.rs  baaba_raw_pts.rs  decode_pts_trace.rs
rust/crates/miniter-render-plan/: Cargo.toml
rust/crates/miniter-render-plan/src/: compositor.rs  lib.rs  render_graph.rs  transition_blend.rs
rust/crates/miniter-usecases/: Cargo.toml
rust/crates/miniter-usecases/src/: commands.rs  history.rs  lib.rs  reducer.rs  selection.rs
rust/src/: lib.rs
rust/uniffi-bindgen/: Cargo.toml
rust/uniffi-bindgen/src/: main.rs
shared/: build.gradle.kts
shared/src/androidMain/kotlin/org/mlm/miniter/datastore/: DataStoreFactory.android.kt
shared/src/androidMain/kotlin/org/mlm/miniter/engine/: ImageData.android.kt  PlatformFrameGrabber.android.kt  PlatformVideoEngine.android.kt
shared/src/androidMain/kotlin/org/mlm/miniter/platform/: AndroidContext.kt  ExportSupport.android.kt  FileSystem.android.kt  Platform.android.kt  PlatformMediaPath.android.kt  SupportedFormats.android.kt  Synchronized.android.kt
shared/src/androidMain/kotlin/org/mlm/miniter/rust/: RustCoreSession.android.kt
shared/src/commonMain/kotlin/org/mlm/miniter/: App.kt
shared/src/commonMain/kotlin/org/mlm/miniter/di/: AppModule.kt  KoinApp.kt
shared/src/commonMain/kotlin/org/mlm/miniter/editor/: RustCommandJson.kt  RustProjectStore.kt
shared/src/commonMain/kotlin/org/mlm/miniter/editor/model/: RustProjectMapper.kt  RustProjectSnapshot.kt
shared/src/commonMain/kotlin/org/mlm/miniter/engine/: ExportProgress.kt  FilterGraphBuilder.kt  FrameFilterProcessors.kt  ImageData.kt  PlatformFrameGrabber.kt  ThumbnailResult.kt  UndoManager.kt  VideoEngine.kt  VideoInfo.kt  extractThumbnails.kt
shared/src/commonMain/kotlin/org/mlm/miniter/nav/: Navigator.kt
shared/src/commonMain/kotlin/org/mlm/miniter/platform/: ExportSupport.kt  Platform.kt  PlatformFilePath.kt  PlatformFileSystem.kt  PlatformMediaPath.kt  SupportedFormats.kt  Synchronized.kt  UuidUtil.kt
shared/src/commonMain/kotlin/org/mlm/miniter/project/: FilterDefs.kt  Keyframe.kt  MinterProject.kt  ProjectRepository.kt  RecentProject.kt  RecentProjectsRepository.kt
shared/src/commonMain/kotlin/org/mlm/miniter/rust/: RustCoreRepository.kt  RustCoreSession.kt
shared/src/commonMain/kotlin/org/mlm/miniter/settings/: SettingsDefinition.kt
shared/src/commonMain/kotlin/org/mlm/miniter/ui/theme/: Theme.kt  (+1 more)
shared/src/commonMain/kotlin/org/mlm/miniter/viewmodel/: EditorViewModel.kt  ProjectViewModel.kt
shared/src/jvmMain/kotlin/org/mlm/miniter/datastore/: DataStoreFactory.jvm.kt
shared/src/jvmMain/kotlin/org/mlm/miniter/engine/: ImageData.jvm.kt  PlatformFrameGrabber.jvm.kt  PlatformVideoEngine.jvm.kt
shared/src/jvmMain/kotlin/org/mlm/miniter/platform/: ExportSupport.jvm.kt  FileSystem.jvm.kt  Platform.jvm.kt  PlatformFilePath.jvm.kt  SupportedFormats.jvm.kt
shared/src/jvmMain/kotlin/org/mlm/miniter/rust/: RustCoreSession.jvm.kt
shared/src/wasmJsMain/kotlin/org/mlm/miniter/engine/: ImageData.wasm.kt  PlatformFrameGrabber.wasm.kt  PlatformVideoEngine.wasm.kt
shared/src/wasmJsMain/kotlin/org/mlm/miniter/platform/: ExportSupport.wasm.kt  FileSystem.wasm.kt  Platform.wasm.kt  PlatformFilePath.wasm.kt  PlatformMediaPath.wasm.kt  PlatformWasmEnv.kt  SettingsProvider.wasm.kt  SupportedFormats.wasm.kt  Synchronized.wasm.kt
shared/src/wasmJsMain/kotlin/org/mlm/miniter/rust/: RustCoreSession.wasm.kt
webApp/: build.gradle.kts
webApp/src/wasmJsMain/kotlin/: main.kt
webApp/src/wasmJsMain/resources/: index.html
(+23 files in other folders)
