[workspace]
resolver = "2"
members = [
    "crates/miniter-domain",
    "crates/miniter-usecases",
    "crates/miniter-render-plan",
    "crates/miniter-audio",
    "crates/miniter-media-native",
    "crates/miniter-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
thiserror = "2"
log = "0.4"
anyhow = "1"
web-time = "1.1.0"
uniffi = { version = "0.31", features = ["wasm-unstable-single-threaded"] }

[patch.crates-io]
muxide = { git = "https://github.com/mlm-games/muxide" }
ass-renderer = { git = "https://github.com/mlm-games/ass-rs", package = "ass-renderer" }
ass-core = { git = "https://github.com/mlm-games/ass-rs", package = "ass-core" }
videoson-core = { git = "https://github.com/mlm-games/videoson", package = "videoson-core" }
videoson-codec-h264 = { git = "https://github.com/mlm-games/videoson", package = "videoson-codec-h264" }
baabaabaabaabababbababbaa = { git = "https://github.com/mlm-games/baa4bababab2baa", package = "baabaabaabaabababbababbaa" }
cros-codecs = { git = "https://github.com/mlm-games/cros-codecs" }
cros-libva = { git = "https://github.com/mlm-games/cros-libva" }
mediacodec = { git = "https://github.com/mlm-games/rust_mediacodec", package = "mediacodec" }

# muxide = { path = "../../../Documents/Repos/muxide" }
# ass-renderer = { path = "../../../Documents/Repos/ass-rs/crates/ass-renderer" }
# ass-core = { path = "../../../Documents/Repos/ass-rs/crates/ass-core" }
# cros-libva = { path = "../../../Documents/Repos/cros-libva/lib" }
# cros-codecs = { path = "../../../Documents/Repos/cros-codecs" }
