[workspace]
resolver = "2"
members = [
    "crates/miniter-domain",
    "crates/miniter-usecases",
    "crates/miniter-render-plan",
    "crates/miniter-audio",
    "crates/miniter-media-native",
    "crates/miniter-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
thiserror = "2"
log = "0.4"
anyhow = "1"
web-time = "1.1.0"
uniffi = { version = "0.31", features = ["wasm-unstable-single-threaded"] }
symphonia-adapter-oporus = "0.1.3"
baabaabaabaabababbababbaa = { git = "https://github.com/mlm-games/baa4bababab2baa", package = "baabaabaabaabababbababbaa" }
symphonia = "0.6"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "gif",
    "bmp",
    "tiff",
] }
getrandom = { version = "0.4", features = ["wasm_js"] }
oporus = "0.2.4"
ivf = "0.1"
fontdue = "0.9"
web-sys = "0.3"
wasm-bindgen-futures = "0.4"

ass-renderer = { git = "https://github.com/mlm-games/ass-rs", package = "ass-renderer", default-features = false }
ass-core = { git = "https://github.com/mlm-games/ass-rs", package = "ass-core" }

[patch.crates-io]
muxide = { git = "https://github.com/mlm-games/muxide" }
videoson = { git = "https://github.com/mlm-games/videoson" }
# web-codecs = { git = "https://github.com/mlm-games/web-rs.git", branch = "main" }
# cros-codecs = { git = "https://github.com/mlm-games/cros-codecs" }
# cros-libva = { git = "https://github.com/mlm-games/cros-libva" }
# mediacodec = { git = "https://github.com/mlm-games/rust_mediacodec", package = "mediacodec" }

symphonia-format-isomp4 = { git = "https://github.com/mlm-games/symphonia", package = "symphonia-format-isomp4" }
symphonia-core = { git = "https://github.com/mlm-games/symphonia", package = "symphonia-core" }
# web-codecs = { path = "../../../Documents/Repos/web-rs/web-codecs" }
# baabaabaabaabababbababbaa = { path = "../../../Documents/Repos/baabaabaabaabababbababbaa" }

# muxide = { path = "../../../Documents/Repos/muxide" }
# ass-renderer = { path = "../../../Documents/Repos/ass-rs/crates/ass-renderer" }
# ass-core = { path = "../../../Documents/Repos/ass-rs/crates/ass-core" }
# cros-libva = { path = "../../../Documents/Repos/cros-libva/lib" }
# cros-codecs = { path = "../../../Documents/Repos/cros-codecs" }

# [patch."https://github.com/mlm-games/cros-codecs?branch=main"]
# cros-codecs = { path = "../../../Documents/Repos/cros-codecs" }

# [patch."https://github.com/mlm-games/cros-codecs"]
# cros-codecs = { path = "../../../Documents/Repos/cros-codecs" }

# [patch."https://github.com/mlm-games/baa4bababab2baa"]
# baabaabaabaabababbababbaa = { path = "../../../Documents/Repos/baa4bababab2baa" }

# [patch."https://github.com/mlm-games/rust_mediacodec"]
# mediacodec = { path = "../../../Documents/Repos/rust_mediacodec" }

[profile.release] # for fdroid
opt-level = 3
lto = "fat"
codegen-units = 1
