[package]
name = "miniter-audio"
version.workspace = true
edition.workspace = true

[dependencies]
miniter-domain = { path = "../miniter-domain" }
symphonia = { version = "0.6", features = [
    "aac", "alac", "flac", "mpa", "vorbis",
    "isomp4", "mkv", "ogg", "wav",
] }
thiserror.workspace = true
log.workspace = true
