[package]
name = "miniter-audio"
version.workspace = true
edition.workspace = true

[dependencies]
miniter-domain = { path = "../miniter-domain" }
symphonia = { workspace = true, features = [
    "aac",
    "alac",
    "flac",
    "mpa",
    "vorbis",
    "isomp4",
    "mkv",
    "ogg",
    "wav",
] }
symphonia-adapter-oporus.workspace = true
thiserror.workspace = true
log.workspace = true
