[package]
name = "miniter-ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
miniter-domain = { path = "../miniter-domain" }
miniter-usecases = { path = "../miniter-usecases" }
miniter-audio = { path = "../miniter-audio" }
miniter-render-plan = { path = "../miniter-render-plan" }
miniter-media-native = { path = "../miniter-media-native" }
serde.workspace = true
uniffi.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "tiff"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "=0.2.114"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
base64 = "0.22"
js-sys = "0.3.91"
ivf = "0.1"
mousiki = "0.2.1"
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }
web-sys = { version = "0.3.91", features = [
    "Blob",
    "BlobPropertyBag",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlElement",
    "Node",
    "Url",
    "Window",
] }
