[package]
name = "miniter-ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
miniter-domain = { path = "../miniter-domain" }
miniter-usecases = { path = "../miniter-usecases" }
miniter-audio = { path = "../miniter-audio" }
miniter-render-plan = { path = "../miniter-render-plan" }
miniter-media-native = { path = "../miniter-media-native" }
serde.workspace = true
uniffi.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
image.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
baabaabaabaabababbababbaa = { workspace = true }
getrandom.workspace = true
wasm-bindgen = "=0.2.125"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen-futures.workspace = true
base64 = "0.22"
js-sys = "0.3.99"
ivf.workspace = true
oporus.workspace = true

web-sys = { workspace = true, features = [
    "Blob",
    "BlobPropertyBag",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlElement",
    "Node",
    "Url",
    "Window",
] }
