[package]
name = "miniter-media-native"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
miniter-domain = { path = "../miniter-domain" }
miniter-render-plan = { path = "../miniter-render-plan" }
miniter-audio = { path = "../miniter-audio" }
thiserror.workspace = true
log.workspace = true
web-time.workspace = true

# Image loading (PNG, JPG, WebP, GIF, BMP, TIFF)
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "gif",
    "bmp",
    "tiff",
] }

# Container demux/mux
mp4 = "0.14"
muxide = "0.2"

# H.264 encoder
less-avc = { version = "0.1.5" }
# openh264 = { version = "0.9", optional = true }  # TODO: only if requested / av1 is not preferred

# AV1
rav1e = { version = "0.8", default-features = false }
ivf = "0.1"
av-ivf = "0.5"

# video demux via MKV/WebM (VP8/VP9/AV1/etc.) + audio
symphonia = { version = "0.6", features = ["isomp4", "mkv", "pcm", "ogg"] }

# Opus encoding
oporus = "0.2.4"

fast_image_resize = "6.0"

# Text rendering for export
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }

libblur = "0.24"
palette = "0.7"
bytemuck = "1"

videoson = { version = "0.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
ass-renderer = { git = "https://github.com/mlm-games/ass-rs", default-features = false, features = [
    "software-backend",
    "image",
    "simd",
] }
ass-core = { git = "https://github.com/mlm-games/ass-rs", package = "ass-core" }

[target.'cfg(all(target_os = "android", target_arch = "aarch64"))'.dependencies]
baabaabaabaabababbababbaa = { workspace = true, features = [
    "android",
], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
baabaabaabaabababbababbaa = { workspace = true, features = [
    "linux",
], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
baabaabaabaabababbababbaa = { workspace = true, features = [
    "web-codecs",
], optional = true }
web-codecs = "0.3"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
web-sys = { version = "0.3.99", features = ["Window", "Document", "Storage"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen-futures = "0.4"
less-avc = { version = "0.1.5", optional = true }

[features]
default = ["videoson", "av1", "hw-decoder"]

videoson = ["dep:videoson", "videoson/h264"]

av1 = ["dep:videoson", "videoson/rav1d"]

# Use hw-decoder (native platform decoder) if available
hw-decoder = ["dep:baabaabaabaabababbababbaa"]
