[package]
name = "miniter-media-native"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
miniter-domain = { path = "../miniter-domain" }
miniter-render-plan = { path = "../miniter-render-plan" }
miniter-audio = { path = "../miniter-audio" }
thiserror.workspace = true
log.workspace = true
web-time.workspace = true

image.workspace = true

mp4 = "0.14"
muxide = "0.2"

less-avc = { version = "0.1.5" }

rav1e = { version = "0.8", default-features = false }
ivf.workspace = true
av-ivf = "0.5"

symphonia = { workspace = true, features = ["isomp4", "mkv", "pcm", "ogg"] }

oporus.workspace = true

fast_image_resize = "6.0"

fontdue.workspace = true

libblur = "0.24"
palette = "0.7"
bytemuck = "1"

videoson = { version = "0.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
ass-renderer = { git = "https://github.com/mlm-games/ass-rs", default-features = false, features = [
    "software-backend",
    "image",
    "simd",
] }
ass-core = { git = "https://github.com/mlm-games/ass-rs", package = "ass-core" }

[target.'cfg(all(target_os = "android", target_arch = "aarch64"))'.dependencies]
baabaabaabaabababbababbaa = { workspace = true, features = [
    "android",
], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
baabaabaabaabababbababbaa = { workspace = true, features = [
    "linux",
], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
baabaabaabaabababbababbaa = { workspace = true, features = [
    "web-codecs",
], optional = true }
web-codecs = "0.3"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
web-sys = { workspace = true, features = ["Window", "Document", "Storage"] }
getrandom.workspace = true
wasm-bindgen-futures.workspace = true
less-avc = { version = "0.1.5", optional = true }

[features]
default = ["videoson", "av1", "hw-decoder"]

videoson = ["dep:videoson", "videoson/h264"]

av1 = ["dep:videoson", "videoson/rav1d"]

hw-decoder = ["dep:baabaabaabaabababbababbaa"]
